# ai-test-agent-system-platform-

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  ag.py  cleanup-admin-wal.ps1  cleanup-log-20260706-admin.txt  cleanup-log-20260706.txt  cleanup-log.txt  cleanup-preview.csv  langgraph.json  large-files-c-drive.csv  openapi.json  pw_stdout.txt  pyproject.toml  start_server_inmem.py  start_server_postgres.py  test-run-schedule-unification-plan.md  tewt.py  transform_skill.py  update_example.py  模型API-KEY汇总.md
LightRAG/: .dockerignore  .env.example  query_test.json  start-docling.bat  start-lightrag.bat  start-lightrag.ps1  start-lightrag.sh
backend/: apply_log_columns.py
deploy/: .env.demo.example  .env.production.example  README-deploy.md  app.Dockerfile  deploy-demo.sh  deploy.sh  docker-compose.demo.yml  docker-compose.yml  gitnexus.Dockerfile  ui.Dockerfile
gitnexus-shared/: package-lock.json  package.json  tsconfig.json
gitnexus-web/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
langgraph_api/: __init__.py  asgi_transport.py  asyncio.py  cli.py  command.py  config.py  cron_scheduler.py  errors.py  executor_entrypoint.py  feature_flags.py  graph.py  http.py  http_metrics.py  http_metrics_utils.py  logging.py  metadata.py  patch.py  queue_entrypoint.py  route.py  schema.py  self_hosted_logs.py  self_hosted_metrics.py  serde.py  server.py  sse.py  state.py  store.py  stream.py  thread_ttl.py  traceblock.py  validation.py  (+2 more)
(+867 files in other folders)
