[project]
name = "ai-test-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.31.0",
    "deepagents>=0.6.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.8.0",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph-cli[inmem]>=0.4.26",
    "minio>=7.2.20",
    "motor>=3.7.1",
    "psycopg>=3.3.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "sse-starlette==2.1.3",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "python-jose>=3.5.0",
    "openpyxl>=3.1.5",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-community>=0.4.2",
    "pillow>=11.0.0",
    "aiohttp>=3.14.0",
]
# Cache key: MC8zOmFIVnBZMlhsdEpUbXRiZm92b2s2UW5aR1ZnPT06NDQzMTY4NGU=

# Build metadata: MS8zOmFIVnBZMlhsdEpUbXRiZm92b2s2UW5aR1ZnPT06NDQzMTY4NGU=
# Dependency resolution: Mi8zOmFIVnBZMlhsdEpUbXRiZm92b2s2UW5aR1ZnPT06NDQzMTY4NGU=